Resize logo grid correctly on mobile phones

--- a/src/containers/Admin/LogoTab/styles.scss
+++ b/src/containers/Admin/LogoTab/styles.scss
@@ -1,8 +1,6 @@
 @import '../../../assets/styles/import.scss';
 
 .logo-grid {
-    gap: 8rem;
-
     .eds-file-upload__wrapper {
         width: 100%;
         margin-top: 5px;
@@ -45,7 +43,7 @@
         .logo-preview-toolbar {
             display: flex;
             margin-top: 0.4rem;
-            justify-content: flex-end;
+            margin-bottom: 1rem;
             align-items: center;
 
             a {
@@ -65,5 +63,9 @@
     // The design system overrides this when using contrast, but we still want it.
     .eds-form-control-wrapper--disabled {
         background-color: #e9e9e9;
+    }
+
+    @media (min-width: 1600px) {
+        gap: 8rem;
     }
 }
